@@ -12,7 +12,9 @@ Some of these people are:
  * Yoan Blanc <yoan.blanc@gmail.com>
  * Paul Carey <paul.p.carey@gmail.com>
  * Benoit Chesneau <bchesneau@gmail.com>
+ * Jason Davies <jason@jasondavies.com>
  * Paul Joseph Davis <paul.joseph.davis@gmail.com>
+ * Maximillian Dornseif <md@hudora.de>
  * Michael Gottesman <gottesmm@reed.edu>
  * Michael Hendricks <michael@ndrix.org>
  * Till Klampaeckel <till@klampaeckel.de>
