@@ -102,7 +102,7 @@ start_server(IniFiles) ->
    
 
     % ensure these applications are running
-    application:start(inets),
+    application:start(ibrowse),
     application:start(crypto),
 
     {ok, Pid} = supervisor:start_link(
